# sdd

./: .gitignore  CLAUDE.md  README.md  gen.sh  pyproject.toml  sdd.md  specify-proposal.md
.claude/commands/: specify.md  tasks.md
.github/workflows/: manual-release.yml  release.yml
agent_templates/claude/commands/: plan.md
agent_templates/copilot/: copilot-instructions.md
agent_templates/copilot/prompts/: plan.prompt.md  specify.prompt.md  tasks.prompt.md
agent_templates/gemini/: GEMINI.md
base/: CLAUDE.md
base/.claude/: settings.local.json
base/.claude/commands/: generate_plan.md  new_feature.md
base/memory/: constitution.md
base/templates/: feature-spec-template.md  implementation-plan-template.md
memory/: constitution.md
scripts/: check-task-prerequisites.sh  create-new-feature.sh  setup-plan.sh  update-claude-md.sh
specs/001-create-taskify/: feature-spec.md  implementation-plan.md  manual-testing.md
specs/001-create-taskify/implementation-details/: 00-research.md  01-environment-setup.md  02-data-model.md  03-api-contracts.md  04-algorithms.md  05-integrations.md  06-contract-tests.md  07-integration-tests.md  08-inter-library-tests.md
specs/001-taskify-task-management/: feature-spec.md  implementation-plan.md
specs/001-taskify-task-management/implementation-details/: 00-research.md  (+3 more)
specs/002-taskify-kanban/: feature-spec.md  implementation-plan.md  manual-testing.md
src/specify4_cli/: __init__.py
src/specify_cli/: __init__.py
templates/: plan-template.md  worktree-setup.sh
templates/commands/: plan.md  specify.md  tasks.md
(+31 files in other folders)
