[project]
name = "specify4-cli"
version = "0.1.0"
description = "Setup tool for Specify4 spec-driven development projects"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx",
    "platformdirs",
]

[project.scripts]
specify = "specify4_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify4_cli"]